Tue Jul 18 18:48:05 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change threadtests output so that it doesn't use om_stringstream.

Tue Jul 18 17:12:49 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Debug system now prints out the (currently numeric) debug type
	  before the output, to make it easier to tune OM_DEBUG_TYPES

	* OM_DEBUG_TYPES=0 now means no debugging output, instead of all.

Mon Jul 17 19:35:05 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The testsuite now has improved reporting of test failures.  It
	  tells you whether it was an exception, a normal fail, or a
	  memory leak (and some combinations).

	* Solaris portability tweaks.

Mon Jul 17 19:13:13 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* BackendManager now working from Java, at least for sleepy databases.

Sat Jul 15 11:05:00 BST 2000 Olly Betts

	* Updated AUTHORS file

Fri Jul 14 18:44:22 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Even closer to BackendManager working in Java.

Fri Jul 14 18:27:25 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Protect dubious tests in internaltest from compilers without
	  -fno-access-control

	* More portability fixes for the Solaris compiler.

Fri Jul 14 15:35:24 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Use -D_REENTRANT if pthreads are being used (fixes bugs on Linux,
	  at the least).

	* Remove further reference to C++ style IO in threadtest.

Fri Jul 14 14:16:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Rework debugging system so that it uses C style IO, and has
	  various other improvements.

Fri Jul 14 14:07:00 BST 2000 Olly Betts

	* Updated .cvsignore-s

Fri Jul 14 14:03:00 BST 2000 Olly Betts

	* Removed trailing whitespace from various files.

Fri Jul 14 12:28:00 BST 2000 Olly Betts

	* apitest: near1 and phrase1 now run boolean queries since we only
	  care which documents are returned, and not the ordering; added